# caitsith

caitsith/: README.md  app.py  pyproject.toml
caitsith/notebooks/: demo_caitsith_studio.ipynb
caitsith/notebooks/demo_assets/: catalogo_demo.csv  ventas_demo.csv
caitsith/notebooks/demo_assets/notebook_frames/: duplicados.csv  resultado.csv  ventas.csv
caitsith/src/caitsith/: __init__.py  core.py
caitsith/src/caitsith_studio/: __init__.py  app.py  models.py
caitsith/src/caitsith_studio/core/: __init__.py  caitsith_loader.py  executor.py  introspection.py  operation_registry.py  pipeline.py  serializer.py
caitsith/src/caitsith_studio/examples/: __init__.py  demo_caitsith.py  sample_data.py
caitsith/src/caitsith_studio/ui/: __init__.py  forms.py  pipeline_editor.py  preview.py
