[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caitsith"
version = "0.1.0"
description = "Funciones tipo Excel para pandas DataFrames"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pandas",
  "numpy",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
